# cardboard

./: .gitignore  Cargo.toml  LICENSE  README.md
.cardboard/cards/: create_card.md
public/: main.css  main.js
public/css/: main.css
public/example/: config.yml
public/example/cards/: boards.md  create_card.md  drag_and_drop.md  get_started.md  make_it_pretty.md  update_card.md
public/js/: main.js
src/: api.rs  configuration.rs  git.rs  macros.rs  main.rs  text_files.rs  views.rs  yaml_utils.rs
src/templates/: index.hbs
