[package]

name = "cardboard"
description = "A decentralized, kanban-style collaboration tool which lets you organize tasks into customizable cards based on plain, versioned text files."
version = "0.1.0"
authors = [ "Markus Kahl <machisuji@gmail.com>" ]
license = "MIT"
homepage = "https://github.com/machisuji/cardboard"
readme = "README.md"

[dependencies]
openssl = "0.9.1"
hoedown = "5.0.0"
iron = "0.4.0"
webbrowser = "0.1.3"
router = "0.4.0"
staticfile = "0.3.1"
clap = "2.18.0"
lazy_static = "0.2.2"
linked-hash-map = "0.3.0"
params = "0.5.1"
git2 = "0.6.1"
rustc-serialize = "0.3.21"

[dependencies.yaml-rust]
version = "0.3.4"
features = ["preserve_order"]

[dependencies.hyper]
version = "0.9.12"
default-features = false

[dependencies.handlebars-iron]
version = "0.20.0"
features = ["watch"]
